; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/adreno/extr_a5xx_gpu.c_a5xx_zap_shader_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/adreno/extr_a5xx_gpu.c_a5xx_zap_shader_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msm_gpu = type { i32 }

@a5xx_zap_shader_init.loaded = internal global i32 0, align 4
@GPU_PAS_ID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.msm_gpu*)* @a5xx_zap_shader_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @a5xx_zap_shader_init(%struct.msm_gpu* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.msm_gpu*, align 8
  %4 = alloca i32, align 4
  store %struct.msm_gpu* %0, %struct.msm_gpu** %3, align 8
  %5 = load i32, i32* @a5xx_zap_shader_init.loaded, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.msm_gpu*, %struct.msm_gpu** %3, align 8
  %9 = call i32 @a5xx_zap_shader_resume(%struct.msm_gpu* %8)
  store i32 %9, i32* %2, align 4
  br label %19

10:                                               ; preds = %1
  %11 = load %struct.msm_gpu*, %struct.msm_gpu** %3, align 8
  %12 = load i32, i32* @GPU_PAS_ID, align 4
  %13 = call i32 @adreno_zap_shader_load(%struct.msm_gpu* %11, i32 %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  store i32 %17, i32* @a5xx_zap_shader_init.loaded, align 4
  %18 = load i32, i32* %4, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %10, %7
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @a5xx_zap_shader_resume(%struct.msm_gpu*) #1

declare dso_local i32 @adreno_zap_shader_load(%struct.msm_gpu*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
